	  better control over when the static constructors run.
	* RGMP 4.0 updated from Qiany Yu.
	* configs/*/Make.defs and configs/*/ld.script:  Massive clean-up
	  and standardization of linker scripts from Freddie Chopin.
	* net/netdev_ioctl.c:  Add interface state flags and ioctl calls
	  to bring network interfaces up and down (from Darcy Gong).
	* config/stm32f4discovery: Enable C++ exceptions.  Now the entire
	  apps/examples/cxxtest works -- meaning the the uClibc++ is
	  complete and verified for the STM32 platform.

6.24 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/src/stm32:  Support for STM32F100 high density chips
	  added by Freddie Chopin.
	* configs/stm32f100_generic:  Support for generic STM32F100RC board
	  contributed by Freddie Chopin.
	* arch/arm/src/stm32_otgfsdev.c:  Partial fix from Petteri Aimonen.
	* drivers/lcd/ug-2864ambag01.c and include/nuttx/lcd/ug_2864ambag01.h:
	  LCD driver for the Univision OLED of the same name (untested on
	  initial check-in).
	* configs/stm32f4discovery/nxlines:  Configure to use mconf/Kconfig
	  tool.
	* configs/stm32f4discovery/src/up_ug2864ambag01.c:  Board-specific
	  initialization for UG-2864AMBAG01 OLED connecte to STM32F4Disovery.
	* libxx/libxx_stdthrow.cxx:  Exception stubs from Petteri Aimonen.
	* configs/stm32f4discovery/src/up_ug2864ambag01.c: Driver has been
	  verified on the STM32F4Discovery platform.  Some tuning of the
	  configuration could improve the presentation.  Lower resolution displays
	  are also more subject to the "fat, flat line bug" that I need to fix
	  someday.  See http://www.nuttx.org/doku.php?id=wiki:graphics:nxgraphics
	  for a description of the fat, flat line bug.
	* libc:  Renamed nuttx/lib to nuttx/libc to make space for a true lib/
	  directory that will be forthcoming.  Also rename libraries:  liblib.a -> libc.a,
	  libulib.a -> libuc.a, libklib.a -> libkc.a, liblibxx.a ->libcxx.a.
	  (I will probably, eventually rename libxx to libcxx for consistency)