@@ -236,6 +236,8 @@
  |   |       `- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/fs/nxffs/README.txt"><b><i>README.txt</i></b></a>
  |   |- graphics/
  |   |   `- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/graphics/README.txt"><b><i>README.txt</i></b></a>
+ |   |- lib/
+ |   |   `- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/lib/README.txt">README.txt</a>
  |   |- libc/
  |   |   `- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/libc/README.txt"><b><i>README.txt</i></b></a>
  |   |- libxx/
