@@ -3595,3 +3595,10 @@
 	  directory that will be forthcoming.  Also rename libraries:  liblib.a -> libc.a,
 	  libulib.a -> libuc.a, libklib.a -> libkc.a, liblibxx.a ->libcxx.a.
 	  (I will probably, eventually rename libxx to libcxx for consistency)
+	* Makefile, lib/: A new, empty directory that will hold generated libraries.
+	  This simplifies the library patch calculations and lets me get rid of some
+	  bash logic.  The change is functional, but only partially complete;
+	  additional logic is needed in the arch/*/src/Makefile's as well.  Right
+	  now that logic generate multiple library paths, all pointing to the lib/
+	  directory.
+
